# aicure_opendbm

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  blog.html  help.html  index.html  markdown-page.html  opensearch.xml  process_data.py  pytest.ini  readme.md  requirements.txt  search.html  setup.cfg  setup.py  showcase.html  sitemap.xml  sw.js  tes.py  test.pyi  tox.ini  versions.html
OpenFace/: install1.sh  install2.sh  install3.sh  install4.sh
api/: api-doc.html  facial-activity-api.html  facial_activity_api.html  movement-api.html  movement_api.html  speech-api.html  speech_api.html  verbal-accoustics-api.html  verbal-acoustics-api.html  verbal_accoustics_api.html
blog/: archive.html  atom.xml  feed.json  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
contributing/: changelogs-in-pull-requests.html  code-of-conduct.html  community-discussions.html  how-to-contribute-code.html  issue-reporting.html  license-contact.html  opendbm-listserv-signup.html  overview.html  publications-and-referencing.html
dbm_lib/: __init__.py
docs/: action-units.html  amount-data-needed.html  api-doc.html  audio-guidelines.html  audio-intensity.html  basic-usage.html  beginner-installation.html  behavioral-considerations.html  biomaker-variables.html  data-guidelines.html  dependencies-installation.html  derived-variables.html  docusaurus.config.js  emotional-expressivity.html  eye-blink-behavior.html  eye-gaze-directionality.html  facial-activity.html  facial-asymmetry.html  facial-landmark.html  facial-tremor.html  formant-frequencies.html  fundamental-frequency.html  getting-started.html  glottal-to-noise-excitation-ratio.html  harmonics-to-noise-ratio.html  head-movement.html  intro.html  jitter.html  lexical-richness.html  mac-linux-usage.html  (+23 more)
(+4277 files in other folders)
