[metadata]
name = dbm-test123
# $version will be replaced automatically by Github Actions pipeline
version = $version
description = OpenDBM is a software package that allows for calculation of digital biomarkers of health and functioning from video or audio of an individual’s behavior.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/teebid/aicure_opendbm
author = The OpenDBM Development Team
author_email = opendbm-dev@aicure.com
license = AGPL-3.0
license_files = LICENSE
platforms = any
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/teebid/aicure_opendbm/issues
    Documentation = https://teebid.github.io/aicure_opendbm
    Source Code = https://github.com/teebid/aicure_opendbm

[options]
packages = find:
install_requires =
    numpy>=1.17
    pandas==1.1.5
    matplotlib==3.5.2
    praat-parselmouth
    watchtower
    webrtcvad
    imutils
    numba==0.48.0
    librosa==0.9.2
    more_itertools
    scipy
    pyyaml==5.4.1
    pydub
    deepspeech==0.9.3
    nltk
    lexicalrichness
    vaderSentiment
    opencv-python>=4.5.5
    cmake; "Windows" not in platform_system
    dlib>=19.13.0; "Windows" not in platform_system
python_requires = >=3.7
include_package_data = True


[options.extras_require]
test =
    pytest>=6.0
    coverage
    pre-commit
